@@ -29,11 +29,11 @@ public class EmployeeRepository {
 	}
 	
 	public List<Employee> findByDepartment(Long departmentId) {
-		return employees.stream().filter(a -> a.getDepartmentId().equals(departmentId)).collect(Collectors.toList());
+		return employees.stream().filter(a -> a.getDepartmentId().equals(departmentId)).toList();
 	}
 	
 	public List<Employee> findByOrganization(Long organizationId) {
-		return employees.stream().filter(a -> a.getOrganizationId().equals(organizationId)).collect(Collectors.toList());
+		return employees.stream().filter(a -> a.getOrganizationId().equals(organizationId)).toList();
 	}
 	
 }
